<resources>
    <string name="app_name">EventFinder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_the_keyword">Enter the keyword</string>
    <string name="keyword">Keyword*</string>
    <string name="distance_miles">Distance(miles)</string>
    <string name="category">Category*</string>
    <string name="location">Location*</string>
    <string name="auto_detect">Auto-Detect</string>
    <string name="enter_the_location">Enter the Location</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>

    <string-array name="spinner_options">
        <item>All</item>
        <item>Music</item>
        <item>Sports</item>
        <item>Arts &amp; Theatre</item>
        <item>Film</item>
        <item>Miscellaneous</item>

    </string-array>
</resources>