<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="380dp"
    android:layout_marginTop="50dp"
    android:layout_marginStart="5dp"
    android:layout_centerHorizontal="true"
    android:layout_height="wrap_content"
    tools:context=".SearchFragment">





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/black"

        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keyword"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:layout_marginTop="12dp"
            />

        <AutoCompleteTextView
            android:id="@+id/keyword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/enter_the_keyword"
            android:layout_marginTop="12dp"
            android:textColorHint="@color/grey"
            android:textColor="@color/white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_miles"
            android:layout_marginTop="12dp"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:textSize="25sp"
            />

        <EditText
            android:id="@+id/distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColorHint="@color/white"
            android:hint="10"

            android:textColor="@color/white"
            android:inputType="number"
            android:autofillHints="10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:layout_marginTop="12dp"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:textSize="25sp"
            />

        <Spinner
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/location"

            android:textStyle="bold"
            android:textColor="@color/green"
            android:textSize="25sp"
            android:layout_weight="1"
            />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:text="@string/auto_detect"
                tools:ignore="UseSwitchCompatOrMaterialXml"
                />



        </LinearLayout>

        <EditText
            android:id="@+id/location"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/enter_the_location"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:textColorHint="@color/grey"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"

            >

            <Button
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:textColor="@color/white"
                android:backgroundTint="@color/green"
                android:layout_marginStart="80dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:textColor="@color/white"
                android:backgroundTint="@color/orange"
                android:layout_marginStart="80dp"

                style="?android:attr/buttonBarButtonStyle" />


        </LinearLayout>


    </LinearLayout>
</FrameLayout>